code for RF estimation

--- a/ot_imaging_analysis/v04 - analyze indexes for all fish.ipynb
+++ b/ot_imaging_analysis/v04 - analyze indexes for all fish.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget"
+    "%matplotlib widget\n",
+    "%load_ext autoreload"
    ]
   },
   {
@@ -15,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%autoreload 2\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
     "from bouter import EmbeddedExperiment\n",
@@ -45,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fids = list(pooled_dicts.keys())"
+    "master_path = Path(\"/Volumes/Shared/experiments/E0070_receptive_field/v04_flashing_rad_simple\")\n",
+    "pooled_data = fl.load(master_path / \"new_pooled.h5\")"
    ]
   },
   {
@@ -54,25 +57,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numba import njit, prange\n",
     "\n",
-    "@njit\n",
-    "def roll_matrix(input_mat, indexes):\n",
-    "    \n",
-    "    output_mat = np.empty_like(input_mat)\n",
-    "    \n",
-    "    for i in prange(output_mat.shape[1]):\n",
-    "        output_mat[:, i] = np.roll(input_mat[:, i], indexes[i])\n",
-    "    \n",
-    "    return output_mat\n",
     "\n",
-    "def center_on_peak(input_mat):\n",
-    "    \"\"\"Recenter along the 1st dimension.\n",
-    "    \"\"\"\n",
-    "    idxs = - np.argmax(input_mat, 0) - input_mat.shape[0] // 2\n",
-    "    \n",
-    "    return roll_matrix(input_mat, idxs)"
+    "pooled_data[\"fid\"] = pooled_data[\"cid\"].apply(fix_fid)\n",
+    "path_list = [f.parent for f in master_path.glob(\"*/data_from_suite2p_unfiltered.h5\")]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -84,37 +80,42 @@
     "\n",
     "exp_df = []\n",
     "df_list = []\n",
-    "for k in tqdm(list(pooled_dicts.keys())):\n",
-    "    if k not in [\"210611_f14\"]:\n",
-    "        gen = [\"abl\", \"cnt\"][(int(k.split(\"_f\")[1]) % 2)]\n",
-    "        rel_scores = pooled_dicts[k][\"rel_scores\"]\n",
-    "        amp_scores = pooled_dicts[k][\"amp_scores\"]\n",
+    "for path in tqdm(path_list):\n",
+    "    k = path.name\n",
+    "    data = fl.load(path / \"cell_resps.h5\")\n",
+    "    gen = [\"abl\", \"cnt\"][(int(k.split(\"_f\")[1]) % 2)]\n",
+    "    rel_scores = data[\"rel_scores\"]\n",
+    "    amp_scores = data[\"amp_scores\"]\n",
+    "    in_tectum = data[\"in_tectum\"]\n",
     "\n",
-    "        n_cells = rel_scores.shape[1]\n",
-    "        n_stims = rel_scores.shape[0]\n",
+    "    n_cells = rel_scores.shape[1]\n",
+    "    n_stims = rel_scores.shape[0]\n",
     "\n",
-    "        reord_rel = center_on_peak(rel_scores)\n",
-    "        reord_amp = center_on_peak(amp_scores)\n",
+    "    reord_rel = center_on_peak(rel_scores)\n",
+    "    reord_amp = center_on_peak(amp_scores)\n",
     "\n",
-    "        df = pd.DataFrame(np.concatenate([rel_scores, amp_scores, reord_rel, reord_amp], 0).T, \n",
-    "                          columns=[f\"rel_{i}\" for i in range(n_stims)] + \n",
-    "                                  [f\"amp_{i}\" for i in range(n_stims)] + \n",
-    "                                  [f\"rel_reord_{i}\" for i in range(n_stims)] + \n",
-    "                                  [f\"amp_reord_{i}\" for i in range(n_stims)])\n",
-    "        df[\"cid\"] = [f\"{k}_{i:05.0f}\" for i in range(n_cells)]\n",
-    "        df[\"gen\"] = gen\n",
-    "        df[\"fid\"] = k\n",
+    "    df = pd.DataFrame(np.concatenate([rel_scores, amp_scores, reord_rel, reord_amp], 0).T, \n",
+    "                      columns=[f\"rel_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"amp_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"rel_reord_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"amp_reord_{i}\" for i in range(n_stims)])\n",
+    "    df[\"cid\"] = [f\"{k}_{i:05.0f}\" for i in range(n_cells)]\n",
+    "    df[\"gen\"] = gen\n",
+    "    df[\"fid\"] = k\n",
+    "    df[\"in_tectum\"] = in_tectum\n",
     "\n",
-    "        df[\"max_rel\"] = np.max(rel_scores, 0)\n",
-    "        df[\"max_rel_i\"] = np.argmax(rel_scores, 0)\n",
-    "        df[\"max_amp\"] = np.max(amp_scores, 0)\n",
-    "        df[\"max_amp_i\"] = np.argmax(amp_scores, 0)\n",
+    "    df[\"max_rel\"] = np.nanmax(rel_scores, 0)\n",
+    "    df[\"max_rel_i\"] = np.argmax(rel_scores, 0)\n",
+    "    df[\"max_amp\"] = np.nanmax(amp_scores, 0)\n",
+    "    df[\"max_amp_i\"] = np.argmax(amp_scores, 0)\n",
     "\n",
-    "        exp_df.append(dict(fid=k,\n",
-    "                    gen=gen,\n",
-    "                    n_cells=n_cells,\n",
-    "                    above_rel_thr=np.sum(np.max(rel_scores, 0) > REL_SCORE_THR)))\n",
-    "        df_list.append(df)\n",
+    "    exp_df.append(dict(fid=k,\n",
+    "                gen=gen,\n",
+    "                n_cells=n_cells,\n",
+    "                n_cells_tectum=sum(in_tectum),\n",
+    "                above_rel_thr=np.sum(np.max(rel_scores[:, in_tectum], 0) > REL_SCORE_THR),\n",
+    "                above_rel_thr_all=np.sum(np.max(rel_scores, 0) > REL_SCORE_THR)))\n",
+    "    df_list.append(df)\n",
     "    \n",
     "full_df = pd.concat(df_list, axis=0)\n",
     "full_df = full_df.set_index(full_df[\"cid\"])\n",
@@ -131,24 +132,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rel_istograms = dict()\n",
+    "exp_df.groupby(\"gen\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rel_histograms = dict()\n",
     "\n",
     "plt.figure(figsize=(4, 3))\n",
     "plt.title(\"Reliability score\")\n",
     "for i, g in enumerate([\"cnt\", \"abl\"]):\n",
-    "    sel_fids = full_df.loc[full_df[\"gen\"]==g, \"fid\"].unique()# [:1]\n",
+    "    \n",
+    "    sel_fids = full_df.loc[full_df[\"gen\"]==g, \"fid\"].unique()\n",
     "    print(sel_fids)\n",
     "    all_hists = []\n",
     "    for f in sel_fids:\n",
-    "        h, bins = np.histogram(full_df.loc[full_df[\"fid\"]==f, \"max_rel\"], \n",
+    "        h, bins = np.histogram(full_df.loc[(full_df[\"fid\"]==f) & full_df[\"in_tectum\"], \"max_rel\"], \n",
     "                                   np.arange(0, 1, 0.02), density=True)\n",
     "        all_hists.append(h)\n",
-    "    rel_istograms[g] = np.array(all_hists)\n",
+    "    rel_histograms[g] = np.array(all_hists)\n",
     "\n",
     "    x_bins = (bins[1:] + bins[:-1]) / 2\n",
     "\n",
-    "    plt.plot(x_bins, rel_istograms[g].T, c=cols[i], lw=0.2)\n",
-    "    plt.plot(x_bins, rel_istograms[g].mean(0), c=cols[i], lw=2, label=g)\n",
+    "    plt.plot(x_bins, rel_histograms[g].T, c=cols[i], lw=0.2)\n",
+    "    plt.plot(x_bins, rel_histograms[g].mean(0), c=cols[i], lw=2, label=g)\n",
     "    \n",
     "plt.legend(frameon=False)\n",
     "plt.yscale(\"log\")\n",
@@ -170,19 +181,19 @@
     "plt.title(\"Response amplitude\")\n",
     "\n",
     "for i, g in enumerate([\"cnt\", \"abl\"]):\n",
-    "    sel_fids = full_df.loc[full_df[\"gen\"]==g, \"fid\"].unique()\n",
+    "    sel_fids = full_df.loc[(full_df[\"gen\"]==g), \"fid\"].unique()\n",
     "    print(sel_fids)\n",
     "    all_hists = []\n",
     "    for f in sel_fids:\n",
-    "        h, bins = np.histogram(full_df.loc[full_df[\"fid\"]==f, \"max_amp\"], \n",
+    "        h, bins = np.histogram(full_df.loc[(full_df[\"fid\"]==f) & full_df[\"in_tectum\"], \"max_amp\"], \n",
     "                                   np.arange(0, 6, 0.2),density=True)\n",
     "        all_hists.append(h)\n",
-    "    rel_istograms[g] = np.array(all_hists)\n",
+    "    all_hists[i] = np.array(all_hists)\n",
     "\n",
     "    x_bins = (bins[1:] + bins[:-1]) / 2\n",
     "\n",
-    "    plt.plot(x_bins, rel_istograms[g].T, c=cols[i], lw=0.2)\n",
-    "    plt.plot(x_bins, np.nanmean(rel_istograms[g], 0), c=cols[i], lw=2, label=g)\n",
+    "    plt.plot(x_bins, all_hists[i].T, c=cols[i], lw=0.2)\n",
+    "    plt.plot(x_bins, np.nanmean(all_hists[i], 0), c=cols[i], lw=2, label=g)\n",
     "    \n",
     "plt.legend(frameon=False)\n",
     "sns.despine()\n",
@@ -190,6 +201,24 @@
     "plt.xlabel(\"\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_df[\"mn_amplitude\"] = full_df.loc[full_df[\"in_tectum\"] & full_df[\"max_rel\"] > REL_SCORE_THR, :].groupby(\"fid\").mean()[\"max_amp\"]\n",
+    "plt.figure(figsize=(3, 3))\n",
+    "sns.swarmplot(data=exp_df, x=\"gen\", y=\"mn_amplitude\", order=[\"cnt\", \"abl\"])\n",
+    "sns.despine()\n",
+    "plt.tight_layout()\n",
+    "diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, \"mn_amplitude\"] for g in [\"cnt\", \"abl\"]])\n",
+    "plt.xlabel(\"Genotype\")\n",
+    "plt.ylabel(\"Mean response amplitude\")\n",
+    "\n",
+    "plt.text(0.5, 1, f\"p={diff_p.pvalue:0.4f}\", ha=\"center\", fontsize=10)"
    ]
   },
   {
@@ -205,16 +234,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_df[\"fraction_resp\"] = (exp_df[\"above_rel_thr\"] / exp_df[\"n_cells\"])*100\n",
+    "exp_df[\"fraction_resp\"] = (exp_df[\"above_rel_thr\"])\n",
     "plt.figure(figsize=(3, 3))\n",
-    "sns.swarmplot(data=exp_df, x=\"gen\", y=\"fraction_resp\")\n",
+    "sns.swarmplot(data=exp_df, x=\"gen\", y=\"fraction_resp\", order=[\"cnt\", \"abl\"])\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
     "diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, \"fraction_resp\"] for g in [\"cnt\", \"abl\"]])\n",
     "plt.xlabel(\"Genotype\")\n",
-    "plt.ylabel(\"Responsive cells (%)\")\n",
+    "plt.ylabel(\"Responsive cells (n)\")\n",
     "\n",
-    "plt.text(0.5, 6, f\"p={diff_p.pvalue:0.4f}\")"
+    "plt.text(0.5, 800, f\"p={diff_p.pvalue:0.4f}\")"
    ]
   },
   {
@@ -251,7 +280,7 @@
     "x_range = (np.arange(36) - 18)*10\n",
     "f, axs = plt.subplots(3, 1, figsize=(4, 6), sharex=True)\n",
     "for i, k in enumerate([\"abl\", \"cnt\"]):\n",
-    "    data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > 0.5), \n",
+    "    data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > REL_SCORE_THR) & full_df[\"in_tectum\"], \n",
     "                       [f\"rel_reord_{i}\" for i in range(36)]].values.T\n",
     "    data = data / data[18, :]\n",
     "    axs[i].plot(x_range, data[:, ::], lw=0.3, c=[c+0.1 for c in cols[i]])\n",
@@ -259,7 +288,7 @@
     "    axs[i].plot(x_range, np.nanmedian(data, 1), lw=2, c=[c-0.1 for c in cols[i]])\n",
     "    \n",
     "for i, k in enumerate([\"abl\", \"cnt\"]):\n",
-    "    data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > 0.6), \n",
+    "    data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > 0.5)  & full_df[\"in_tectum\"], \n",
     "                       [f\"rel_reord_{i}\" for i in range(36)]].values.T\n",
     "    data = data / data[18, :]\n",
     "    mn = np.nanmedian(data, 1)\n",
@@ -320,10 +349,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "popt = []\n",
     "pcov = []\n",
@@ -334,7 +361,9 @@
     "        pcov.append(c)\n",
     "    except RuntimeError:\n",
     "        popt.append(np.full(3, np.nan))\n",
-    "        pcov.append(np.full((3, 3), np.nan))"
+    "        pcov.append(np.full((3, 3), np.nan))\n",
+    "        \n",
+    "fl.save(\"fit.h5\", dict(popt=np.array(popt), pcov=np.array(pcov)))"
    ]
   },
   {
@@ -343,7 +372,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fl.save(\"fit.h5\", dict(popt=np.array(popt), pcov=np.array(pcov)))\n",
     "popt = fl.load(\"fit.h5\", \"/popt\")"
    ]
   },
@@ -371,12 +399,13 @@
    "source": [
     "plt.close(\"all\")\n",
     "plt.figure(figsize=(4, 3))\n",
-    "thr = 0.5\n",
+    "thr = REL_SCORE_THR\n",
     "bw = 0.3\n",
     "histograms = dict()\n",
     "for g in [\"cnt\", \"abl\"]:\n",
     "    histograms[g], b = np.histogram(\n",
-    "         full_df.loc[(full_df[\"max_rel\"] > thr) & (full_df[\"gen\"] == g), \"fit_sigma\"].values,\n",
+    "         full_df.loc[(full_df[\"max_rel\"] > thr) & (full_df[\"gen\"] == g) & full_df[\"in_tectum\"], \n",
+    "                     \"fit_sigma\"].values,\n",
     "         np.arange(0, 10, bw), density=True)\n",
     "    \n",
     "    x_bins = (b[1:] + b[:-1]) / 2\n",
@@ -402,17 +431,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "exp_df[\"mean_sigma\"] = np.nan\n",
     "for f in exp_df.index:\n",
-    "    s = full_df.loc[(full_df[\"fid\"]==f) & (full_df[\"max_rel\"] > 0.4), \"fit_sigma\"] \n",
+    "    s = full_df.loc[(full_df[\"fid\"]==f) & (full_df[\"max_rel\"] > REL_SCORE_THR) & full_df[\"in_tectum\"], \"fit_sigma\"] \n",
     "    exp_df.loc[f, \"mean_sigma\"] = np.nanmean(s)"
    ]
   },
@@ -423,14 +445,14 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(3, 3))\n",
-    "sns.swarmplot(data=exp_df, x=\"gen\", y=\"mean_sigma\")\n",
+    "sns.swarmplot(data=exp_df, x=\"gen\", y=\"mean_sigma\", order=[\"cnt\", \"abl\"])\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
     "diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, \"mean_sigma\"] for g in [\"cnt\", \"abl\"]])\n",
     "plt.xlabel(\"Genotype\")\n",
     "plt.ylabel(\"Mean sigma\")\n",
     "\n",
-    "plt.text(0.5, 4, f\"p={diff_p.pvalue:0.4f}\")"
+    "plt.text(0.5, 2, f\"p={diff_p.pvalue:0.4f}\")"
    ]
   },
   {
