--- a/ot_imaging_analysis/v04- mutual info correct.ipynb
+++ b/ot_imaging_analysis/v04- mutual info correct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pooled_dicts = fl.load(\"/Users/luigipetrucco/Desktop/pooled_resps.h5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,45 +58,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "master_path = Path(\"/Volumes/Shared/experiments/E0070_receptive_field/v04_flashing_rad_simple\")\n",
+    "pooled_data = fl.load(master_path / \"new_pooled.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [03:42<00:00,  9.67s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "REL_SCORE_THR = 0.5\n",
     "\n",
     "exp_df = []\n",
     "df_list = []\n",
-    "for k in tqdm(list(pooled_dicts.keys())):\n",
-    "    if k != \"210611_f14\":\n",
-    "        gen = [\"abl\", \"cnt\"][(int(k.split(\"_f\")[1]) % 2)]\n",
-    "        rel_scores = pooled_dicts[k][\"rel_scores\"]\n",
-    "        amp_scores = pooled_dicts[k][\"amp_scores\"]\n",
+    "for k in tqdm(pooled_data[\"fid\"].unique()):\n",
+    "    path = master_path / k\n",
+    "    data = fl.load(path / \"cell_resps.h5\")\n",
+    "    gen = [\"abl\", \"cnt\"][(int(k.split(\"_f\")[1]) % 2)]\n",
+    "    rel_scores = data[\"rel_scores\"]\n",
+    "    amp_scores = data[\"amp_scores\"]\n",
+    "    in_tectum = data[\"in_tectum\"]\n",
     "\n",
-    "        n_cells = rel_scores.shape[1]\n",
-    "        n_stims = rel_scores.shape[0]\n",
     "\n",
-    "        reord_rel = center_on_peak(rel_scores)\n",
-    "        reord_amp = center_on_peak(amp_scores)\n",
     "\n",
-    "        df = pd.DataFrame(np.concatenate([rel_scores, amp_scores, reord_rel, reord_amp], 0).T, \n",
-    "                          columns=[f\"rel_{i}\" for i in range(n_stims)] + \n",
-    "                                  [f\"amp_{i}\" for i in range(n_stims)] + \n",
-    "                                  [f\"rel_reord_{i}\" for i in range(n_stims)] + \n",
-    "                                  [f\"amp_reord_{i}\" for i in range(n_stims)])\n",
-    "        df[\"cid\"] = [f\"{k}_{i:05.0f}\" for i in range(n_cells)]\n",
-    "        df[\"gen\"] = gen\n",
-    "        df[\"fid\"] = k\n",
+    "    n_cells = rel_scores.shape[1]\n",
+    "    n_stims = rel_scores.shape[0]\n",
     "\n",
-    "        df[\"max_rel\"] = np.max(rel_scores, 0)\n",
-    "        df[\"max_rel_i\"] = np.argmax(rel_scores, 0)\n",
-    "        df[\"max_amp\"] = np.max(amp_scores, 0)\n",
-    "        df[\"max_amp_i\"] = np.argmax(amp_scores, 0)\n",
+    "    reord_rel = center_on_peak(rel_scores)\n",
+    "    reord_amp = center_on_peak(amp_scores)\n",
     "\n",
-    "        exp_df.append(dict(fid=k,\n",
-    "                    gen=gen,\n",
-    "                    n_cells=n_cells,\n",
-    "                    above_rel_thr=np.sum(np.max(rel_scores, 0) > REL_SCORE_THR)))\n",
-    "        df_list.append(df)\n",
+    "    df = pd.DataFrame(np.concatenate([rel_scores, amp_scores, reord_rel, reord_amp], 0).T, \n",
+    "                      columns=[f\"rel_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"amp_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"rel_reord_{i}\" for i in range(n_stims)] + \n",
+    "                              [f\"amp_reord_{i}\" for i in range(n_stims)])\n",
+    "    df[\"cid\"] = [f\"{k}_{i:05.0f}\" for i in range(n_cells)]\n",
+    "    df[\"gen\"] = gen\n",
+    "    df[\"fid\"] = k\n",
+    "\n",
+    "    df[\"max_rel\"] = np.max(rel_scores, 0)\n",
+    "    df[\"max_rel_i\"] = np.argmax(rel_scores, 0)\n",
+    "    df[\"max_amp\"] = np.max(amp_scores, 0)\n",
+    "    df[\"max_amp_i\"] = np.argmax(amp_scores, 0)\n",
+    "\n",
+    "    exp_df.append(dict(fid=k,\n",
+    "                gen=gen,\n",
+    "                n_cells=n_cells,\n",
+    "                above_rel_thr=np.sum(np.max(rel_scores, 0) > REL_SCORE_THR)))\n",
+    "    df_list.append(df)\n",
     "\n",
     "full_df = pd.concat(df_list, axis=0)\n",
     "full_df = full_df.set_index(full_df[\"cid\"])\n",
@@ -124,18 +137,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [12:10<00:00, 31.77s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "pooled_all_dicts = fl.load(\"/Users/luigipetrucco/Desktop/pooled_all_resps.h5\")"
+    "pooled_all_dicts = dict()\n",
+    "for path in tqdm(list(master_path.glob(\"*_f*\"))):\n",
+    "    pooled_all_dicts[path.name] = dict(all_amps = fl.load(path / \"cell_all_resps.h5\", \"/all_amps\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['210611_f2', '210611_f4', '210611_f5', '210611_f3', '210621_f1', '210621_f2', '210621_f3', '210621_f4', '210621_f10', '210621_f11', '210621_f13', '210621_f14', '210621_f22', '210621_f20', '210621_f21', '210624_f0', '210624_f1', '210624_f3', '210624_f4', '210624_f5', '210624_f11', '210624_f14', '210611_f15'])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pooled_all_dicts.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'210611_f1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-1af8fc747dbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mall_amps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpooled_all_dicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"210611_f1\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"all_amps\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrel_scores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpooled_all_dicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"210611_f1\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"rel_scores\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mamp_scores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpooled_all_dicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"210611_f1\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"amp_scores\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmax_rels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrel_scores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmax_amps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mamp_scores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: '210611_f1'"
+     ]
+    }
+   ],
    "source": [
     "all_amps = pooled_all_dicts[\"210611_f1\"][\"all_amps\"]\n",
     "rel_scores = pooled_all_dicts[\"210611_f1\"][\"rel_scores\"]\n",
@@ -284,7 +339,7 @@
    "source": [
     "full_df[\"mutual_info\"] = np.nan\n",
     "for f in tqdm(full_df[\"fid\"].unique()):\n",
-    "    all_amps = pooled_all_dicts[f][\"all_amps\"]\n",
+    "    all_amps = fl.load(master_path / f / \"cell_all_resps.h5\", \"/all_amps\") #  pooled_all_dicts[f][\"all_amps\"]\n",
     "    all_mutual_info = mutual_info_allcells(all_amps[:, :, :])\n",
     "    full_df.loc[full_df[\"fid\"] == f, \"mutual_info\"] = all_mutual_info"
    ]
@@ -308,7 +363,7 @@
     "sns.swarmplot(data=exp_df, x=\"gen\", y=\"mean_info\")\n",
     "sns.despine()\n",
     "plt.tight_layout()\n",
-    "diff_p = ttest_ind(*[exp_df.loc[exp_df[\"gen\"] == g, \"mean_info\"] for g in [\"cnt\", \"abl\"]])\n",
+    "diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, \"mean_info\"] for g in [\"cnt\", \"abl\"]])\n",
     "plt.xlabel(\"Genotype\")\n",
     "plt.ylabel(\"Mean mutual info\")\n",
     "\n",
@@ -503,181 +558,6 @@
     "sns.despine()\n",
     "plt.yscale(\"log\")\n",
     "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fraction of responsive cells"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp_df[\"fraction_resp\"] = (exp_df[\"above_rel_thr\"] / exp_df[\"n_cells\"])*100\n",
-    "plt.figure(figsize=(3, 3))\n",
-    "sns.swarmplot(data=exp_df, x=\"gen\", y=\"fraction_resp\")\n",
-    "sns.despine()\n",
-    "plt.tight_layout()\n",
-    "diff_p = ranksums(*[exp_df.loc[exp_df[\"gen\"] == g, \"fraction_resp\"] for g in [\"cnt\", \"abl\"]])\n",
-    "plt.xlabel(\"Genotype\")\n",
-    "plt.ylabel(\"Responsive cells (%)\")\n",
-    "\n",
-    "plt.text(0.5, 6, f\"p={diff_p.pvalue:0.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close(\"all\")\n",
-    "f, axs = plt.subplots(3, 1, figsize=(4, 6))\n",
-    "for i, k in enumerate([\"abl\", \"cnt\"]):\n",
-    "    data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > 0.8), \n",
-    "                       [f\"rel_reord_{i}\" for i in range(36)]].values.T\n",
-    "    axs[i].plot(data[:, ::], lw=0.3, c=[c+0.1 for c in cols[i]])\n",
-    "\n",
-    "    axs[i].plot(np.nanmean(data, 1), lw=2, c=[c-0.1 for c in cols[i]])\n",
-    "    \n",
-    "for i, k in enumerate([\"abl\", \"cnt\"]):\n",
-    "    data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > 0.8), \n",
-    "                       [f\"rel_reord_{i}\" for i in range(36)]].values.T\n",
-    "\n",
-    "    axs[2].plot(np.nanmean(data, 1), lw=2, c=[c-0.1 for c in cols[i]])\n",
-    "plt.show()\n",
-    "sns.despine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = full_df.loc[(full_df[\"gen\"]==k) & (full_df[\"max_rel\"] > 0.8), \n",
-    "                       [f\"rel_reord_{i}\" for i in range(36)]].values.T\n",
-    "\n",
-    "popt, pcov = [], []\n",
-    "for i in range(data.shape[1]):\n",
-    "    o, c = curve_fit(gaussian, x, y, p0=[max(y), mean, sigma])\n",
-    "    popt.append(o)\n",
-    "    pcov.append"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.optimize import curve_fit\n",
-    "\n",
-    "x = np.arange(36)\n",
-    "y = data[:, 500]\n",
-    "\n",
-    "mean = sum(x * y) / sum(y)\n",
-    "sigma = np.sqrt(sum(y * (x - mean)**2) / sum(y))\n",
-    "\n",
-    "def gaussian(x, a, x0, sigma):\n",
-    "    return a * np.exp(-(x - x0)**2 / (2 * sigma**2))\n",
-    "\n",
-    "popt, pcov = curve_fit(gaussian, x, y, p0=[max(y), mean, sigma])\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(x, y, 'b+:', label='data')\n",
-    "plt.plot(x, Gauss(x, *popt), 'r-', label='fit')\n",
-    "plt.legend()\n",
-    "plt.title('Fig. 3 - Fit for Time Constant')\n",
-    "plt.xlabel('Time (s)')\n",
-    "plt.ylabel('Voltage (V)')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_data_mat = full_df.loc[:, [f\"rel_reord_{i}\" for i in range(36)]].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "popt = []\n",
-    "pcov = []\n",
-    "for i in tqdm(range(full_data_mat.shape[0])):\n",
-    "    try:\n",
-    "        p, c = curve_fit(gaussian, x, full_data_mat[i, :], p0=[max(y), mean, sigma])\n",
-    "        popt.append(p)\n",
-    "        pcov.append(c)\n",
-    "    except RuntimeError:\n",
-    "        popt.append(np.full(3, np.nan))\n",
-    "        pcov.append(np.full((3, 3), np.nan))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fl.save(\"fit.h5\", dict(popt=np.array(popt), pcov=np.array(pcov)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fit_params = np.array(popt)\n",
-    "\n",
-    "for i, par_name in enumerate([\"fit_amp\", \n",
-    "                              \"fit_mn\", \n",
-    "                              \"fit_sigma\"]):\n",
-    "    full_df[par_name] = fit_params[:, i]\n",
-    "    \n",
-    "full_df[\"fit_sigma\"] = np.abs(full_df[\"fit_sigma\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.hist()\n",
-    "sns.violinplot(data=full_df[full_df[\"max_rel\"] > 0.7], x=\"gen\", y=\"fit_sigma\")\n",
-    "# full_df.[(full_df[\"gen\"]==\"abl\") & (), \"fit_sigma\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close(\"all\")\n",
-    "plt.figure()\n",
-    "thr = 0.7\n",
-    "bw = 0.2\n",
-    "plt.hist(full_df.loc[(full_df[\"max_rel\"] > thr) & (full_df[\"gen\"] == \"cnt\"), \"fit_sigma\"].values,\n",
-    "         np.arange(0, 10, bw), lw=0, alpha=0.4, density=True)\n",
-    "plt.hist(full_df.loc[(full_df[\"max_rel\"] > thr) & (full_df[\"gen\"] == \"abl\"), \"fit_sigma\"].values,\n",
-    "         np.arange(0, 10, bw), lw=0, alpha=0.4, density=True)\n",
-    "plt.show()"
    ]
   },
   {
